--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <meta name="description" content="">
   
   <title>Home</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -49,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="mbr-section article content10 cid-r9fyashTjD" id="content10-3">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="mbr-section article content10 cid-r9fyashTjD" id="content10-3">
     
      
 
@@ -128,7 +127,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="assets/files/Final%20Document%20Plan%20for%20Literacy%20Link.pdf" target="_blank"><span class="mbr-iconfont mbrib-pages" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
+                    <a href="https://www.dropbox.com/s/ra12c8fej1fe6ue/Final%20Document%20Plan%20for%20Literacy%20Link.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5"><p>Literacy Link: Document Plan</p></h4>
@@ -138,7 +137,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="assets/files/Assisted Living-Program Proposal.pdf" target="_blank"><span class="mbr-iconfont mbrib-pages" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
+                    <a href="https://www.dropbox.com/s/ra12c8fej1fe6ue/Final%20Document%20Plan%20for%20Literacy%20Link.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">Activities Program Proposal</h4>
@@ -149,7 +148,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="assets/files/Game Analysis_McManus.pdf" target="_blank"><span class="mbr-iconfont mbrib-pages" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
+                    <a href="https://www.dropbox.com/s/ra12c8fej1fe6ue/Final%20Document%20Plan%20for%20Literacy%20Link.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">Board Game Instructional Set Analysis</h4>
@@ -219,9 +218,9 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
