--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="mbr-section article content10 cid-r9fyashTjD" id="content10-3">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section article content10 cid-r9fyashTjD" id="content10-3">
     
      
 
@@ -137,7 +137,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="https://www.dropbox.com/s/ra12c8fej1fe6ue/Final%20Document%20Plan%20for%20Literacy%20Link.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
+                    <a href="https://www.dropbox.com/s/dlufe8tsify2o29/Assisted%20Living-Program%20Proposal.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">Activities Program Proposal</h4>
@@ -148,7 +148,7 @@
 
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-img pb-3">
-                    <a href="https://www.dropbox.com/s/ra12c8fej1fe6ue/Final%20Document%20Plan%20for%20Literacy%20Link.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
+                    <a href="https://www.dropbox.com/s/3he8vj67yhusk2c/Game%20Analysis_McManus.pdf?dl=0" target="_blank"><span class="mbr-iconfont mbri-file" style="color: rgb(35, 35, 35); fill: rgb(35, 35, 35);"></span></a>
                 </div>
                 <div class="card-box">
                     <h4 class="card-title py-3 mbr-fonts-style display-5">Board Game Instructional Set Analysis</h4>
